--- a/poem51.html
+++ b/poem51.html
@@ -20,9 +20,8 @@
   <!--menu begin-->
   <div class="menu">
     <nav class="nav" id="topnav">
-      <h1 class="logo"><a>高高的东旭</a></h1>
+      <h1 class="logo"><a>HighEast9Sun</a></h1>
       <li><a href="index.html">我的首页</a> </li>
-      <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
       <li><a href="">我的诗</a>
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
@@ -32,8 +31,8 @@
       </li>
       <li><a href="">我的代码</a>
         <ul class="sub-nav">
-          <li><a href="">待开发</a></li>
-          <li><a href="">待开发</a></li>
+          <li><a href="code01.html">TextRank算法</a></li>
+          <li><a href="code02.html">Servlet+Tomcat</a></li>
           <li><a href="">待开发</a></li>
           <li><a href="">待开发</a></li>
           <li><a href="">待开发</a></li>
@@ -55,6 +54,8 @@
           <li><a href="">绝地求生（待开发）</a></li>
         </ul>
       </li>
+      <li><a href="">关于我</a> </li>
+      <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
     </nav>
   </div>
   <!--menu end--> 
@@ -74,6 +75,7 @@
         </ul>
       </div>
       <div class="news_con" style="text-align:center;">
+		<!--content start-->
         <br>
 		街角的路灯把我们的影子轻轻摇晃<br>
 		学校对面的奶茶店还悠悠的飘着奶香<br>
@@ -89,6 +91,7 @@
         <img alt="" src="images/poem/51.jpg"><br>
 		</center>
         <br>
+		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
@@ -111,7 +114,7 @@
         <li class="sina"><span>新浪微博</span>我的微博</a></li>
         <!-- li class="tencent"><span>腾讯微博</span>杨青博客</a></li -->
         <li class="qq"><span>QQ号</span>1306494066</a></li>
-        <li class="email"><span>邮箱帐号</span>gaodngxu@foxmail.com</a></li>
+        <li class="email"><span>邮箱帐号</span>1306494066@qq.com</a></li>
         <li class="wxgzh"><span>微信号</span>1306494066</a></li>
         <li class="wx"><img src="images/wx.jpg"></li>
       </ul>
