--- a/code01.html
+++ b/code01.html
@@ -50,7 +50,7 @@
 	  <li><a href="">我的游戏</a>
         <ul class="sub-nav">
           <li><a href="">英雄联盟（待开发）</a></li>
-          <li><a href="">守望先锋（待开发）</a></li>
+          <li><a href="ow01.html">守望先锋</a></li>
           <li><a href="">绝地求生（待开发）</a></li>
         </ul>
       </li>
@@ -130,17 +130,21 @@
 		  <p>程序员(英文Programmer)是从事程序开发、维护的专业人员。一般将程序员分为程序设计人员和程序编码人员，但两者的界限并不非常清楚，特别是在中国。软件从业人员分为初级程序员、高级程序员、系统分析员和项目经理四大类。</p><br>
 		</blockquote>
 
-		<p>首先对这句话分词，得出分词结果：</p><br>
+		<p>首先对这句话分词，得出分词结果：</p>
 
 		<blockquote>
-		  <p>[程序员/n, (, 英文/nz, programmer/en, ), 是/v, 从事/v, 程序/n, 开发/v, 、/w, 维护/v, 的/uj, 专业/n, 人员/n, 。/w, 一般/a, 将/d, 程序员/n, 分为/v, 程序/n, 设计/vn, 人员/n, 和/c, 程序/n, 编码/n, 人员/n, ，/w, 但/c, 两者/r, 的/uj, 界限/n, 并/c, 不/d, 非常/d, 清楚/a, ，/w, 特别/d, 是/v, 在/p, 中国/ns, 。/w, 软件/n, 从业/b, 人员/n, 分为/v, 初级/b, 程序员/n, 、/w, 高级/a, 程序员/n, 、/w, 系统/n, 分析员/n, 和/c, 项目/n, 经理/n, 四/m, 大/a, 类/q, 。/w]</p><br>
+		<div class="news_about"><p>
+		[程序员/n, (, 英文/nz, programmer/en, ), 是/v, 从事/v, 程序/n, 开发/v, 、/w, 维护/v, 的/uj, 专业/n, 人员/n, 。/w, 一般/a, 将/d, 程序员/n, 分为/v, 程序/n, 设计/vn, 人员/n, 和/c, 程序/n, 编码/n, 人员/n, ，/w, 但/c, 两者/r, 的/uj, 界限/n, 并/c, 不/d, 非常/d, 清楚/a, ，/w, 特别/d, 是/v, 在/p, 中国/ns, 。/w, 软件/n, 从业/b, 人员/n, 分为/v, 初级/b, 程序员/n, 、/w, 高级/a, 程序员/n, 、/w, 系统/n, 分析员/n, 和/c, 项目/n, 经理/n, 四/m, 大/a, 类/q, 。/w]
+		</p>
+		</div>
 		</blockquote>
 
-		<p>然后去掉里面的停用词，比如标点符号、常用词、以及“名词、动词、形容词、副词之外的词”。得出实际有用的词语：</p><br>
+		<p>然后去掉里面的停用词，比如标点符号、常用词、以及“名词、动词、形容词、副词之外的词”。得出实际有用的词语：</p>
 
 		<blockquote>
-		  <p>[程序员, 英文, 程序, 开发, 维护, 专业, 人员, 程序员, 分为, 程序, 设计, 人员, 程序, 编码, 人员, 界限, 特别, 中国, 软件, 人员, 分为, 程序员, 高级, 程序员, 系统, 分析员, 项目, 经理]</p><br>
-		</blockquote>
+		<div class="news_about"><p>[程序员, 英文, 程序, 开发, 维护, 专业, 人员, 程序员, 分为, 程序, 设计, 人员, 程序, 编码, 人员, 界限, 特别, 中国, 软件, 人员, 分为, 程序员, 高级, 程序员, 系统, 分析员, 项目, 经理]</p>
+		</div>
+		  </blockquote>
 
 		<p>然后我们首先计算距离每个词距离不大于窗口大小的词的集合，然后根据公式进行迭代，直到所有词的重要性收敛到某一个值的时候，就可以停止迭代并输出结果。</p><br>
     <hr>
