--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  <li><a href="">我的游戏</a>
         <ul class="sub-nav">
           <li><a href="">英雄联盟（待开发）</a></li>
-          <li><a href="">守望先锋（待开发）</a></li>
+          <li><a href="ow01.html">守望先锋</a></li>
           <li><a href="">绝地求生（待开发）</a></li>
         </ul>
       </li>
@@ -164,6 +164,21 @@
           <li class="lmname">孤单成瘾</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view"><span>99</span>已阅读</li>
+          <li class="like">99</li>
+        </ul>
+      </div>
+    </div>
+	<div class="blogs" data-scroll-reveal="enter bottom over 1s" >
+      <h3 class="blogtitle"><a href="ow01.html">守望先锋</a></h3>
+      <span class="blogpic"><a href="ow01.html" title=""><img src="images/game/ow01.png" alt=""></a></span>
+      <p class="blogtext"><br><br>
+	  </p>
+      <div class="bloginfo">
+        <ul>
+          <li class="author">十乂</li>
+          <li class="lmname">源氏</li>
+          <li class="timer">2000-00-00 00:00:00</li>
+          <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
