--- a/ow01.html
+++ b/ow01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>还记得</title>
+<title>守望先锋</title>
 <link href="css/base.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <div class="menu">
     <nav class="nav" id="topnav">
       <h1 class="logo"><a>HighEast9Sun</a></h1>
-      <li><a href="index.html">我的首页</a> </li>
+      <li><a href="index.html" style="text-align:center;">我的首页</a> </li>
       <li><a href="">我的诗</a>
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
@@ -54,49 +54,42 @@
           <li><a href="">绝地求生（待开发）</a></li>
         </ul>
       </li>
-      <li><a href="">关于我</a> </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
+      <li><a href="">关于我</a> </li>
     </nav>
   </div>
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的诗 > 还记得</span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">我的诗</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 守望先锋 </span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">守望先锋</a></h1>
   <div class="infosbox">
     <div class="newsview">
-      <h3 class="news_title" style="text-align:center;">还记得</h3>
-      <div class="bloginfo" style="text-align:center;">
+      <h3 class="news_title" style="text-align:center;">守望先锋</h3>
+      <div class="bloginfo">
         <ul>
-          <li class="author">文青</li>
-          <li class="lmname">孤单成瘾</li>
+          <li class="author">十乂</li>
+          <li class="lmname">源氏</li>
           <li class="timer">2000-00-00 00:00:00</li>
           <li class="view">99已阅读</li>
           <li class="like">99</li>
         </ul>
       </div>
-      <div class="news_con" style="text-align:center;">
+ 
+      <div class="news_con">
 		<!--content start-->
-        <br>
-		街角的路灯把我们的影子轻轻摇晃<br>
-		学校对面的奶茶店还悠悠的飘着奶香<br>
-		老旧的屋檐上滴下的雨叮咚作响<br>
-		深巷里的梧桐树打碎了斑驳太阳<br>
-		<br>
-		后湖里的荷叶无人拜访绿了又黄<br>
-		娟秀的文字在书箱的最深处被我埋藏<br>
-		偷偷写下你名字的语文书<br>
-		依旧诉说着那段泛黄的时光<br>
-        <br>
 		<center>
-        <img alt="" src="images/poem/51.jpg"><br>
-		</center>
         <br>
+        <img alt="" src="images/game/ow01.png"><br>
+		<br>
+        <img alt="" src="images/game/ow01.gif"><br>
+        <br>
+		</center>
 		<!--content end-->
         </div>
     </div>
     <div class="nextinfo">
-      <p>上一篇：<a href="poem01.html" title="遇见花开">遇见花开</a></p>
-      <p>下一篇：<a href="poem02.html" title="">无</a></p>
+      <p>上一篇：<a>无</a></p>
+      <p>下一篇：<a>无</a></p>
       <p> </p>
       <p> </p>
     </div>
