--- a/ow01.html
+++ b/ow01.html
@@ -61,7 +61,7 @@
   <!--menu end--> 
 </header>
 <article>
-  <h1 class="t_nav"><span>您现在的位置是：首页 > 守望先锋 </span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">守望先锋</a></h1>
+  <h1 class="t_nav"><span>您现在的位置是：首页 > 我的游戏 > 守望先锋 </span><a href="index.html" class="n1">网站首页</a><a href="" class="n2">守望先锋</a></h1>
   <div class="infosbox">
     <div class="newsview">
       <h3 class="news_title" style="text-align:center;">守望先锋</h3>
