--- a/poem02.html
+++ b/poem02.html
@@ -22,14 +22,14 @@
     <nav class="nav" id="topnav">
       <h1 class="logo"><a>HighEast9Sun</a></h1>
       <li><a href="index.html">我的首页</a> </li>
-      <li><a href="">我的诗</a>
+      <li><a >我的诗</a>
         <ul class="sub-nav">
           <li><a href="poem01.html">遇见花开</a></li>
           <li><a href="poem02.html">人生如梦</a></li>
           <li><a href="poem51.html">还记得</a></li>
         </ul>
       </li>
-      <li><a href="">我的代码</a>
+      <li><a >我的代码</a>
         <ul class="sub-nav">
           <li><a href="code01.html">TextRank算法</a></li>
           <li><a href="code02.html">Servlet+Tomcat</a></li>
@@ -38,7 +38,7 @@
           <li><a href="">待开发</a></li>
         </ul>
       </li>
-      <li><a href="">我的影视</a>
+      <li><a >我的影视</a>
         <ul class="sub-nav">
           <li><a href="">待开发</a></li>
           <li><a href="">待开发</a></li>
@@ -47,7 +47,7 @@
           <li><a href="">待开发</a></li>
         </ul>
       </li>
-	  <li><a href="">我的游戏</a>
+	  <li><a >我的游戏</a>
         <ul class="sub-nav">
           <li><a href="">英雄联盟（待开发）</a></li>
           <li><a href="ow01.html">守望先锋</a></li>
@@ -55,7 +55,7 @@
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
-      <li><a href="">关于我</a> </li>
+      <li><a >关于我</a> </li>
     </nav>
   </div>
   <!--menu end--> 
