--- a/code02.html
+++ b/code02.html
@@ -55,7 +55,7 @@
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
-      <li><a >关于我</a> </li>
+      <li><a href="about.html">关于我</a> </li>
     </nav>
   </div>
   <!--menu end--> 
@@ -332,6 +332,9 @@
     </div>
   </div>
 </article>
+<footer>
+  <p>Design by <a href="https://gaodongxu.github.io/">高东旭</a></p>
+</footer>
 <a href="#" class="cd-top">Top</a>
 </body>
 </html>
