--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </ul>
       </li>
       <li><a href="https://blog.csdn.net/qq_29591261" target="_blank">CSDN博客</a> </li>
-      <li><a >关于我</a> </li>
+      <li><a href="about.html">关于我</a> </li>
     </nav>
   </div>
   <!--menu end--> 
