--- a/about.html
+++ b/about.html
@@ -77,10 +77,10 @@
 		<br />
         在北京<strong>凤凰网</strong>实习半年，端茶送水打打杂，顺便负责视频标题关键词提取服务的设计实现和优化；采用 JSP+Tomcat 搭建了各类文本处理算法的展示平台；上线爬取新闻地域识别服务；搭建了各类训练数据与 Kafka 数据库对接的 http 服务；负责词语重要度的计算；定时处理文章质量评分和广告识别日志的服务并把结果写进 Redis 中；定时从百度搜索风云榜爬取热搜词的任务；从 www.poi86.com 上抓取 POI 信息并进行筛选和清洗。<br />
         <br />
-        其他的，英语六级飘过，office让我边搜边用，那我就是精通水平。<br />
+        其他的，英语六级飘过，office如果允许边搜边用，那我就是精通水平。<br />
         <br />
-		github主页：<a herf="https://gaodongxu.github.io/">https://gaodongxu.github.io/</a><br />
-		 CSDN 博客：<a herf="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
+		github主页：<a href="https://gaodongxu.github.io/">https://gaodongxu.github.io/</a><br />
+		 CSDN 博客：<a href="https://blog.csdn.net/qq_29591261">https://blog.csdn.net/qq_29591261</a><br />
 		微信公众号：没BUG（扫一扫，关注我￣ω￣= ）<br />
 		微信小程序：没BUG（扫一扫，关注我￣ω￣= ）<br />
 		<br /><center>
@@ -104,7 +104,7 @@
 	  半个强迫病患&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	  强制对齐 强制对齐 强制对齐 强制对齐<br />
 	  <br />
-	  有人可能会问，以上加起来一共是两个人。对，以前我多重人格，后来我们和好了。<br />
+	  有人可能会问，以上加起来一共是两个人。对，以前我有多重人格，后来我们和好了。<br />
 	  </p>
       <p></p>
     </ul>
