--- a/ow01.html
+++ b/ow01.html
@@ -77,12 +77,22 @@
  
       <div class="news_con">
 		<!--content start-->
-		<center>
+	<center>
         <br>
         <img alt="" src="images/game/ow01.png"><br>
 		<br>
-        <img alt="" src="images/game/ow01.gif"><br>
-        <br>
+		<video width="100%" height="100%" controls>
+		<source src="videos/17-12-04" type="video/mp4">
+		<object data="videos/17-12-04" width="100%" height="100%">
+		</object> 
+		</video>
+		<br><br><br>
+		<video width="100%" height="100%" controls>
+		<source src="videos/18-03-15" type="video/mp4">
+		<object data="videos/18-03-15" width="100%" height="100%">
+		</object> 
+		</video>
+		<br><br><br>
 		</center>
 		<!--content end-->
         </div>
